# internship

program1/: CMakeLists.txt  README.txt
program1/src/: client.cpp  client.h  main.cpp
program2/: CMakeLists.txt  README.txt
program2/src/: main.cpp  server.cpp  server.h
